# squawk-7700

./: JenkinsFile  LICENSE  README.md
artifacts/: telemetry.json
backend/: flight_dynamics.py  server.py  verify_metrics.py
backend/controller/: CMakeLists.txt
backend/controller/src/: pid.cpp
dashboard/: package-lock.json  package.json  tailwind.config.js
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/components/: ControlPanel.tsx  EmergencyFX.tsx  FlightDashboardLayout.tsx  FooterBar.tsx  HUDParticles.tsx  MainGrid.tsx  MetricChart.tsx  MetricsMarquee.tsx  MissionLog.tsx  NavBar.tsx  RightPanel.tsx  StartupOverlay.tsx  StatusCard.tsx  StatusStrip.tsx  TickerBar.tsx
